--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Slides Section -->
         <div id="slides">
             <div class="slide" id="slide-1">
-                <img src="/Volumes/SSD 2/SF Pics/IMG_0500.JPG" alt="Slide 1">
+                <img src="https://drive.google.com/file/d/1yUC0DlxvkVS-VIE1Bpbgv_DUQVnWJqnY/view?usp=drive_link" alt="Slide 1">
             </div>
             <div class="slide" id="slide-2">
                 <img src="path/to/your/image2.jpg" alt="Slide 2">
